# app/models/genre.rb
@@ -3,7 +3,7 @@
 class Genre < ApplicationRecord
   include Indexable
 
-  has_many :assets, dependent: :restrict_with_exception
+  has_many :albums, dependent: :restrict_with_exception
 
   validates :name, presence: true, length: { maximum: 64 }
 end
