# db/schema.rb
@@ -10,18 +10,18 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2021_03_21_060714) do
+ActiveRecord::Schema.define(version: 2021_03_28_085424) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
-  create_table "assets", force: :cascade do |t|
-    t.string "title", limit: 64, null: false
+  create_table "albums", force: :cascade do |t|
+    t.string "title", limit: 255, null: false
     t.string "description"
     t.bigint "genre_id", null: false
     t.datetime "created_at", precision: 6, null: false
     t.datetime "updated_at", precision: 6, null: false
-    t.index ["genre_id"], name: "index_assets_on_genre_id"
+    t.index ["genre_id"], name: "index_albums_on_genre_id"
   end
 
   create_table "genres", force: :cascade do |t|
@@ -31,5 +31,5 @@ ActiveRecord::Schema.define(version: 2021_03_21_060714) do
     t.index ["name"], name: "index_genres_on_name", unique: true
   end
 
-  add_foreign_key "assets", "genres"
+  add_foreign_key "albums", "genres"
 end
